--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -69,7 +69,7 @@
                 <button data-toggle="collapse" data-target="#exam" class="btn btn-primary" style="width:100%">Start Exam</button>
 
                 <div id="exam" class="collapse">
-                    <form id="questionform" action="point to a submit view" method="post">
+                    <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
                       {% for question in course.question_set.all %}
                         <div class="card mt-1">
                           <div class="card-header"><h5>{{question.question_text}}</h5></div>
